# WQD7006-sentiment-analysis

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt  tf_idf.ipynb
data/: llm_embedding_test.csv  llm_embedding_train.csv  test.csv  train.csv
models/: best_model_llm_embedding.pkl  bow_embedding_xgb_model.pkl  llm_embedding_xgb_model.pkl  llm_embedding_xgb_model_v1.pkl  llm_embedding_xgb_model_v2.pkl  llm_embedding_xgb_model_v3.pkl  ngrams_bow_embedding_xgb_model.pkl  ngrams_tfidf_embedding_xgb_model.pkl  sbert_embedding_xgb_model.pkl  tfidf_embedding_xgb_model.pkl  word2vec_embedding_xgb_model.pkl
notebook/01_intro/: eda.ipynb
notebook/02_text-representation-comparison/: 01_bow.ipynb  02_tf_idf.ipynb  03_ngrams_bow.ipynb  03_word2vec-averaging.ipynb  03_word2vec.ipynb  04_ngrams_tf_idf.ipynb  04_sbert_embedding.ipynb  05_llm_embedding.ipynb  05_word2vec.ipynb  06_sbert_embedding.ipynb  07_llm_embedding.ipynb  bow.ipynb  llm_embedding.ipynb  tf_idf.ipynb
notebook/02_text-representation-comparison/utils/: prepare_llm_embedding.py
notebook/03_hyperparameter_tuning/: hyperparameter_tuning.ipynb  llm_embedding_hyperparameter_tuning.ipynb
notebook/03_hyperparameter_tuning/utils/: prepare_llm_embedding.py
