[project]
name = "wqd7006-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.3",
    "imbalanced-learn==0.13.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nltk==3.6.3",
    "pandas==2.2.3",
    "pybind11>=2.13.6",
    "requests>=2.32.3",
    "scikit-learn==1.6.1",
    "sentence-transformers==4.1.0",
    "shap==0.47.2",
    "torch==2.3.1",
    "xgboost==2.1.3",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.3",
]
